feat: SHUB-8 finalization of functionality to create and update payment types in service ms-servicesales
