# src/main/resources/openapi.yaml
@@ -148,6 +148,76 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
+    post:
+      tags:
+        - servicesales-controller
+      summary: Create a new paymentType in the service sales management system(createPaymentType)
+      description: Generacion de un nuevo tipo de pago
+      operationId:  createPaymentType
+      parameters:
+        - $ref: "#/components/parameters/unicaServiceId"
+        - $ref: "#/components/parameters/unicaApplication"
+        - $ref: "#/components/parameters/unicaPid"
+        - $ref: "#/components/parameters/unicaUser"
+        - $ref: "#/components/parameters/authorization"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePaymentRequest'
+      responses:
+        '201':
+          description: Created
+          headers:
+            UNICA-ServiceId:
+              $ref: '#/components/headers/UNICA-ServiceId'
+            UNICA-PID:
+              $ref: '#/components/headers/UNICA-PID'
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+  /sales/payment-type/{paymentTypeId}:
+    patch:
+      tags:
+        - servicesales-controller
+      summary: Update payment by id
+      description: Actualiza el tipo de pago por su identificador
+      operationId: updatePaymentType
+      parameters:
+        - $ref: "#/components/parameters/unicaServiceId"
+        - $ref: "#/components/parameters/unicaApplication"
+        - $ref: "#/components/parameters/unicaPid"
+        - $ref: "#/components/parameters/unicaUser"
+        - $ref: "#/components/parameters/authorization"
+        - name: paymentTypeId
+          in: path
+          required: true
+          schema:
+            type: integer
+            description: paymentType id
+            example: 1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdatePaymentTypeRequest'
+      responses:
+        '204':
+          description: No Content
+          headers:
+            UNICA-ServiceId:
+              $ref: "#/components/headers/UNICA-ServiceId"
+            UNICA-PID:
+              $ref: "#/components/headers/UNICA-PID"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
 components:
   schemas:
     CreateSaleRequest:
@@ -265,6 +335,36 @@ components:
           type: integer
           description: "Payment Type Id"
           example: 1
+        description:
+          type: string
+          description: "Payment Type Description"
+          example: "paypal"
+        status:
+          type: integer
+          description: "Payment Type status"
+          example: 1
+        additionalData:
+          type: array
+          items:
+            $ref: '#/components/schemas/AditionalData'
+    CreatePaymentRequest:
+      type: object
+      properties:
+        description:
+          type: string
+          description: "Payment Type Description"
+          example: "paypal"
+        status:
+          type: integer
+          description: "Payment Type status"
+          example: 1
+        additionalData:
+          type: array
+          items:
+            $ref: '#/components/schemas/AditionalData'
+    UpdatePaymentTypeRequest:
+      type: object
+      properties:
         description:
           type: string
           description: "Payment Type Description"
